--- a/studentDashboard/templates/studentDashboard/student_test_page.html
+++ b/studentDashboard/templates/studentDashboard/student_test_page.html
@@ -65,7 +65,7 @@
                     {% for question in questions %}
                     <div id="questionScrolling-{{ forloop.counter }}">
                         <div class="col-12 questionDiv">
-                            {%if question.question|length > 2000%}
+                            {% if question.question|length > 2000 %}
 
                             <img src="{{question.question}}" alt="Question IMg" height="300" width="auto"
                                 style="display: block !important;">
@@ -191,13 +191,14 @@
                         {% else %}
 
                         <div class="col-12 questionDiv pr-0 pl-0 " id="textField">
-                            <textarea name="danswer" id="qtext" class="answer col-12" cols="30" rows="30"
+                            <textarea name="descriptive-ans-{{forloop.counter}}" onchange="descriptiveAns('descriptive-ans-{{forloop.counter}}','{{forloop.counter}}')" id="descriptive-ans-{{forloop.counter}}" class="answer col-12" cols="30" rows="30"
                                 placeholder="Type answer"></textarea>
         
                         </div>
                         {% endif %}
                     </div>
-                    <input type="number" name="selected-op-{{forloop.counter}}" id="selected-op-{{forloop.counter}}"
+                    <input type="text" name="question-type-{{forloop.counter}}" id="question-type-{{forloop.counter}}" value="{{question.is_objective}}" hidden>
+                    <input type="text" name="selected-op-{{forloop.counter}}" id="selected-op-{{forloop.counter}}"
                         hidden value="0">
                     {% endfor %}
                     <div class="row col-12 mt-4 mb-4 mr-0 ml-0">
