Result Page,History Page,one time test allow

--- a/static/css/result.css
+++ b/static/css/result.css
@@ -430,3 +430,34 @@ input[type="file"]{
 
 
 }
+
+.dcans{
+    margin-top: 50px;
+    padding: 10px;
+    /* box-shadow: 0 5px 10px rgb(189, 148, 229); */
+    border-radius: 7px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
