--- a/studentDashboard/templates/studentDashboard/history_page.html
+++ b/studentDashboard/templates/studentDashboard/history_page.html
@@ -37,14 +37,6 @@
                     d="m 69.575405,67.073826 h -40 c -13.100415,0 -14.380204,-31.80258 -6.899646,-33.421777 24.612039,-5.327373 -9.016154,52.337577 12.75751,30.563913 l 28.284272,-28.284272" />
             </svg>
         </button>
-
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav ml-auto" id="inline-popups">
-                <li class="nav-item active mx-2">
-                    <a class="nav-link" href="#">About Us <span class="sr-only">(current)</span></a>
-                </li>
-            </ul>
-        </div>
     </nav>
 
     <div class="container-fluid mainscreen">
@@ -88,6 +80,7 @@
         <div class="contents">
             <div class="row col-12 myRow m-0">
                 <div class="col-md-10 col-sm-12  ml-auto mr-auto">
+                    <h1 class="text-center" style="margin-top: 20px;">History</h1>
                     <table class="styled-table">
                         <thead>
                             <tr>
@@ -109,7 +102,7 @@
                                     <td>{{i.test_id.totalQuestions}}</td>
                                     <td>{{i.test_id.totalMarks}}</td>
                                     <td>{{i.created_at}}</td>
-                                    <td> <a href="{% url 'result-page' i.score i.no_of_que i.test_id.pk %}">View Result</a></td>
+                                    <td> <a href="{% url 'result-page' i.score i.id i.no_of_que %}">View Result</a></td>
                                 </tr>
                             {% endfor %}
                             <!-- and so on... -->
