--- a/studentDashboard/templates/studentDashboard/result.html
+++ b/studentDashboard/templates/studentDashboard/result.html
@@ -41,23 +41,6 @@
                     d="m 69.575405,67.073826 h -40 c -13.100415,0 -14.380204,-31.80258 -6.899646,-33.421777 24.612039,-5.327373 -9.016154,52.337577 12.75751,30.563913 l 28.284272,-28.284272" />
             </svg>
         </button>
-
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav ml-auto" id="inline-popups">
-                <li class="nav-item active mx-2">
-                    <a class="nav-link" href="#">About Us <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item active mx-2">
-                    <a class="nav-link" data-toggle="modal" data-target="#adminModal" href="#">Admin Login <span
-                            class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item active mx-2">
-                    <a class="nav-link" data-toggle="modal" data-target="#devModal" href="#">Developers <span
-                            class="sr-only">(current)</span></a>
-                </li>
-
-            </ul>
-        </div>
     </nav>
 
     <!-- Main Screen -->
@@ -67,20 +50,24 @@
         <div class="sidebar">
             <div class="nav-icons ">
 
+                <a href="{% url 'dashboard' %}">
                 <div class="parentDiv">
-                    <span class="material-icons myIcon selected">
+                    <span class="material-icons myIcon">
                         analytics
 
                     </span>
                     <p class="mytooltip">Dashboard</p>
                 </div>
+                </a>
 
+                <a href="{% url 'historyPage' %}">
                 <div class="parentDiv">
                     <span class="material-icons myIcon">
                         restore
                     </span>
                     <p class="mytooltip">History</p>
                 </div>
+                </a>
                 <div class="parentDiv">
                     <span class="material-icons myIcon">
                         leaderboard
@@ -357,9 +344,10 @@
                         </div>
                         
                         {% else %}
-                            <p  class="question col-12 " name="question" id="qtext">{{i.fields.descriptive_answer}}</p>
-                            <p class="question col-12 " name="question" id="qtext">{{i.fields.selected_option}}</p>
-
+                            <div class=" col-12 ">
+                            <p  class="dcans correctAnswer d-flex justify-content-center"  name="question" id="qtext">{{i.fields.descriptive_answer}}</p>
+                            <p class="dcans col-12 " style="box-shadow: 0 5px 10px rgb(189, 148, 229);" name="question" id="qtext">{{i.fields.selected_option}} </p>
+                            </div>
 
                         {% endif %}
                     </div>
