--- a/studentDashboard/templates/studentDashboard/student_test_page.html
+++ b/studentDashboard/templates/studentDashboard/student_test_page.html
@@ -46,13 +46,13 @@
             </svg>
         </button>
 
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        {% comment %} <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto" id="inline-popups">
                 <li class="nav-item active mx-2">
                     <a class="nav-link" href="#">About Us <span class="sr-only">(current)</span></a>
                 </li>
             </ul>
-        </div>
+        </div> {% endcomment %}
     </nav>
 
     <div class="container-fluid mainscreen">
